Add sass support.

--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,13 @@
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <!-- Application content -->
+
+    <header ng-include="" src="'partials/header.html'"></header>
+
     <div class="container" ng-view=""></div>
+
+    <!-- Application content ends -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
