--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,9 @@
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/controllers/main.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="scripts/templates.js"></script>
+        <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
