--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
 
     <div class="container" ng-view=""></div>
 
+    <header ng-include="" src="'partials/footer.html'"></header>
+
     <!-- Application content ends -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -56,6 +58,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/create_event.js"></script>
+        <script src="scripts/directives/back.js"></script>
         <!-- endbuild -->
 </body>
 </html>
