--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 </head>
-  <body ng-app="meetupFrontendApp">
+  <body ng-app="meetupApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -59,6 +59,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/create_event.js"></script>
+        <script src="scripts/directives/main.js"></script>
         <script src="scripts/directives/back.js"></script>
         <!-- endbuild -->
 </body>
