Add event model.

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angularjs-rails-resource/angularjs-rails-resource.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -68,6 +69,8 @@
         <script src="scripts/directives/back.js"></script>
         <script src="scripts/directives/fast_click.js"></script>
         <script src="scripts/directives/fast_link.js"></script>
+        <script src="scripts/services/main.js"></script>
+        <script src="scripts/services/event.js"></script>
         <!-- endbuild -->
 </body>
 </html>
