--- a/app/index.html
+++ b/app/index.html
@@ -62,15 +62,18 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/config.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/create_event.js"></script>
-        <script src="scripts/controllers/select_dates.js"></script>
+        <script src="scripts/controllers/create-event.js"></script>
+        <script src="scripts/controllers/select-dates.js"></script>
         <script src="scripts/directives/main.js"></script>
         <script src="scripts/directives/back.js"></script>
         <script src="scripts/directives/fast_click.js"></script>
         <script src="scripts/directives/fast_link.js"></script>
         <script src="scripts/services/main.js"></script>
         <script src="scripts/services/event.js"></script>
+        <script src="scripts/services/event-date.js"></script>
+        <script src="scripts/services/serializers/event-serializer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
