--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 
         <!-- build:js scripts/plugins.js -->
         <script src="vendors/jQueryFastClick/jQuery.fastClick.js"></script>
+        <script src="vendors/datejs/date.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
