Fix bug. Add functionality to get days of month separated by weeks.

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
     <!-- Application content -->
 
-    <div id="wrapper" ng-controller="MainCtrl" class="{{device}}">
+    <div id="wrapper" ng-controller="MainCtrl">
       <header class="global" ng-include="" src="'partials/header.html'"></header>
 
       <div class="container main-content" ng-view=""></div>
@@ -71,8 +71,8 @@
         <script src="scripts/controllers/select-dates.js"></script>
         <script src="scripts/directives/main.js"></script>
         <script src="scripts/directives/back.js"></script>
-        <script src="scripts/directives/fast_click.js"></script>
-        <script src="scripts/directives/fast_link.js"></script>
+        <script src="scripts/directives/fast-click.js"></script>
+        <script src="scripts/directives/fast-link.js"></script>
         <script src="scripts/services/main.js"></script>
         <script src="scripts/services/event.js"></script>
         <script src="scripts/services/event-date.js"></script>
