--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/services/main.js"></script>
         <script src="scripts/services/event.js"></script>
         <script src="scripts/services/event-date.js"></script>
+        <script src="scripts/services/date-helper.js"></script>
         <script src="scripts/services/serializers/event-serializer.js"></script>
         <!-- endbuild -->
 
