Add logic to set class on active cells.

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/directives/back.js"></script>
         <script src="scripts/directives/fast-click.js"></script>
         <script src="scripts/directives/fast-link.js"></script>
+        <script src="scripts/directives/date-status.js"></script>
         <script src="scripts/services/main.js"></script>
         <script src="scripts/services/event.js"></script>
         <script src="scripts/services/event-date.js"></script>
