Update titlebar. Update css.

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/config.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/create-event.js"></script>
         <script src="scripts/controllers/select-dates.js"></script>
         <script src="scripts/directives/main.js"></script>
