--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <div id="wrapper" ng-controller="MainCtrl">
       <header class="global" ng-include="" src="'partials/header.html'"></header>
 
-      <div class="container main-content" ng-view=""></div>
+      <div class="container main-content" ui-view=""></div>
 
       <footer class="global main-content" ng-include="" src="'partials/footer.html'"></footer>
     </div>
@@ -61,6 +61,8 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angularjs-rails-resource/angularjs-rails-resource.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
