--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/directives/fast-link.js"></script>
         <script src="scripts/directives/calendar-cell.js"></script>
         <script src="scripts/directives/select-time.js"></script>
+        <script src="scripts/directives/calendar.js"></script>
         <script src="scripts/services/main.js"></script>
         <script src="scripts/services/event.js"></script>
         <script src="scripts/services/event-date.js"></script>
