--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,9 @@
         <script src="scripts/directives/calendar-cell.js"></script>
         <script src="scripts/directives/select-time.js"></script>
         <script src="scripts/directives/calendar.js"></script>
+        <script src="scripts/filters/main.js"></script>
+        <script src="scripts/filters/sub-array.js"></script>
+        <script src="scripts/filters/time-from-index.js"></script>
         <!-- endbuild -->
 
 </body>
