Use service to pass calendar between scopes. Add filters.

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/services/date-helper.js"></script>
         <script src="scripts/services/serializers/event-serializer.js"></script>
         <script src="scripts/services/time-container.js"></script>
+        <script src="scripts/services/calendar.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/create-event.js"></script>
@@ -88,6 +89,7 @@
         <script src="scripts/filters/main.js"></script>
         <script src="scripts/filters/sub-array.js"></script>
         <script src="scripts/filters/time-from-index.js"></script>
+        <script src="scripts/filters/is-empty.js"></script>
         <!-- endbuild -->
 
 </body>
