--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/services/date-helper.js"></script>
         <script src="scripts/services/serializers/event-serializer.js"></script>
         <script src="scripts/services/time-container.js"></script>
+        <script src="scripts/services/time-cell.js"></script>
         <script src="scripts/services/calendar.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/home.js"></script>
