--- a/app/index.html
+++ b/app/index.html
@@ -27,13 +27,9 @@
 
     <!-- Application content -->
 
-    <div id="wrapper" ng-controller="MainCtrl">
-      <header class="global" ng-include="" src="'partials/header.html'"></header>
-
-      <div class="container main-content" ui-view=""></div>
-
-      <footer class="global main-content" ng-include="" src="'partials/footer.html'"></footer>
+    <div id="wrapper" ng-include="" src="'views/app.html'" ng-controller="AppCtrl">
     </div>
+
 
     <!-- Application content ends -->
 
@@ -77,6 +73,7 @@
         <script src="scripts/services/time-cell.js"></script>
         <script src="scripts/services/calendar.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/create-event.js"></script>
         <script src="scripts/controllers/select-dates.js"></script>
