Add nearest plugin and start support for touch events.

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
 
         <!-- build:js scripts/plugins.js -->
         <script src="vendors/jQueryFastClick/jQuery.fastClick.js"></script>
+        <script src="bower_components/jquery-nearest/jquery.nearest.js"></script>
         <script src="vendors/datejs/date.js"></script>
         <!-- endbuild -->
 
