Add pagination for date selection.

--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
     <script src="scripts/filters/sub-array.js"></script>
     <script src="scripts/filters/time-from-index.js"></script>
     <script src="scripts/filters/is-empty.js"></script>
+    <script src="scripts/filters/paginate.js"></script>
     <!-- endbuild -->
 
 </body>
