--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/app.js"></script>
     <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/controllers/event.js"></script>
     <script src="scripts/controllers/create-event.js"></script>
     <script src="scripts/controllers/select-dates.js"></script>
     <script src="scripts/directives/main.js"></script>
