--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
 
     <!-- build:js scripts/plugins.js -->
     <script src="vendors/jQueryFastClick/jQuery.fastClick.js"></script>
+    <script src="vendors/easy-modal/jquery.easyModal.js"></script>
     <script src="bower_components/jquery-nearest/jquery.nearest.js"></script>
     <script src="vendors/datejs/date.js"></script>
     <!-- endbuild -->
@@ -77,6 +78,7 @@
     <script src="scripts/services/time-container.js"></script>
     <script src="scripts/services/time-cell.js"></script>
     <script src="scripts/services/calendar.js"></script>
+    <script src="scripts/services/create-dialog.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/app.js"></script>
     <script src="scripts/controllers/home.js"></script>
