Add logic to go to page edit after creating event.

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
     <script src="scripts/services/time-container.js"></script>
     <script src="scripts/services/time-cell.js"></script>
     <script src="scripts/services/calendar.js"></script>
+    <script src="scripts/services/event-container.js"></script>
     <script src="scripts/services/create-dialog.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/app.js"></script>
