Move Status constants out from TimeCell.

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/services/serializers/event-serializer.js"></script>
     <script src="scripts/services/time-container.js"></script>
     <script src="scripts/services/time-cell.js"></script>
+    <script src="scripts/services/time-status.js"></script>
     <script src="scripts/services/calendar.js"></script>
     <script src="scripts/services/event-container.js"></script>
     <script src="scripts/services/create-dialog.js"></script>
