--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
 
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
 
     <!-- build:js scripts/plugins.js -->
     <script src="vendors/jQueryFastClick/jQuery.fastClick.js"></script>
