Improve modal after save success.

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script src="vendors/jQueryFastClick/jQuery.fastClick.js"></script>
     <script src="vendors/easy-modal/jquery.easyModal.js"></script>
     <script src="bower_components/jquery-nearest/jquery.nearest.js"></script>
+    <script src="bower_components/jquery-zclip/jquery.zclip.js"></script>
     <script src="vendors/datejs/date.js"></script>
     <!-- endbuild -->
 
