Split controllers for mobile interface. Add validation for time selection.

--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,8 @@
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/event.js"></script>
     <script src="scripts/controllers/create-event.js"></script>
+    <script src="scripts/controllers/event-info.js"></script>
+    <script src="scripts/controllers/select-time.js"></script>
     <script src="scripts/controllers/select-dates.js"></script>
     <script src="scripts/directives/main.js"></script>
     <script src="scripts/directives/back.js"></script>
