Replace MeetUp by MeetApp on all files!

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Welcome to Meet-Up</title>
+    <title>MeetApp | 世界最速のスケジュール調整ツール</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -25,7 +25,7 @@
       </script>
     <![endif]-->
   </head>
-  <body ng-app="meetupApp" id="ng-app">
+  <body ng-app="MeetAppApp" id="ng-app">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
