--- a/app/index.html
+++ b/app/index.html
@@ -75,8 +75,10 @@
     <script src="scripts/config.js"></script>
     <script src="scripts/services/main.js"></script>
     <script src="scripts/services/event.js"></script>
+    <script src="scripts/services/user.js"></script>
     <script src="scripts/services/date-helper.js"></script>
     <script src="scripts/services/serializers/event-serializer.js"></script>
+    <script src="scripts/services/serializers/user-serializer.js"></script>
     <script src="scripts/services/time-container.js"></script>
     <script src="scripts/services/time-cell.js"></script>
     <script src="scripts/services/time-status.js"></script>
