Add scrollpane for modal.

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/jscrollpane/style/jquery.jscrollpane.css">
     <!-- endbuild -->
 
     <!--[if lte IE 8]>
@@ -58,6 +59,9 @@
     <script src="vendors/easy-modal/jquery.easyModal.js"></script>
     <script src="bower_components/jquery-nearest/jquery.nearest.js"></script>
     <script src="bower_components/jquery-zclip/jquery.zclip.js"></script>
+    <script src="bower_components/jscrollpane/script/jquery.jscrollpane.js"></script>
+    <script src="bower_components/jscrollpane/script/jquery.mousewheel.js"></script>
+    <script src="bower_components/jscrollpane/script/mwheelIntent.js"></script>
     <script src="vendors/datejs/date.js"></script>
     <!-- endbuild -->
 
@@ -99,6 +103,7 @@
     <script src="scripts/directives/back.js"></script>
     <script src="scripts/directives/fast-click.js"></script>
     <script src="scripts/directives/fast-link.js"></script>
+    <script src="scripts/directives/scroll-pane.js"></script>
     <script src="scripts/directives/calendar-cell.js"></script>
     <script src="scripts/directives/select-time.js"></script>
     <script src="scripts/directives/calendar.js"></script>
