Add logic to set opacity as function of available participants.

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
     <script src="scripts/services/serializers/event-serializer.js"></script>
     <script src="scripts/services/serializers/user-serializer.js"></script>
     <script src="scripts/services/serializers/availability-serializer.js"></script>
+    <script src="scripts/services/availability-container.js"></script>
     <script src="scripts/services/time-container.js"></script>
     <script src="scripts/services/time-cell.js"></script>
     <script src="scripts/services/time-status.js"></script>
