--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,7 @@
     <script src="scripts/directives/fast-link.js"></script>
     <script src="scripts/directives/scroll-pane.js"></script>
     <script src="scripts/directives/calendar-cell.js"></script>
+    <script src="scripts/directives/selectable-input.js"></script>
     <script src="scripts/directives/select-time.js"></script>
     <script src="scripts/directives/calendar.js"></script>
     <script src="scripts/directives/selectable-table.js"></script>
