Fix some bugs. Remove unimplemented links.

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
         document.createElement('ng-include');
         document.createElement('ng-pluralize');
         document.createElement('ng-view');
+        document.createElement('ng-switch');
 
         document.createElement('calendar');
         document.createElement('select-time');
