--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
     <script src="scripts/directives/calendar.js"></script>
     <script src="scripts/directives/selectable-table.js"></script>
     <script src="scripts/directives/emit-on-render.js"></script>
+    <script src="scripts/directives/zclip.js"></script>
     <script src="scripts/filters/main.js"></script>
     <script src="scripts/filters/sub-array.js"></script>
     <script src="scripts/filters/time-from-index.js"></script>
